Update video element styling to fix layout issues

--- a/style.css
+++ b/style.css
@@ -85,6 +85,15 @@
 
 /* Begin style rules */
 
+video.video {
+	width: 100%;
+}
+
+.mdl-dialog {
+	min-width: 60%;
+	min-height: 0;
+}
+
 img.figure {
 	margin-bottom: 0.6rem;
 }
